# angora

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  config.h.in  configure  configure.ac
cfg/: config_all.cfg
doc/: Makefile.am  Makefile.in  angora.info  angora.texi  coll_half_space.eps  flb_inc.eps  imaging_geometry.eps  pw_inc.eps  sph_coord.eps  sph_pattern.eps  sph_sc.eps
homebrew/: angora.rb
homebrew-angora/: angora.rb
matlab/: angora_fieldvalue.m  angora_movie.m  mod_gaussian_wf.m
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
src/: Makefile.am  Makefile.in  angora.cpp  check_dispersion.cpp  check_dispersion.h  globals.cpp  globals.h  headers.h
src/absorb/: CPML.cpp  CPML.h  Makefile.am  Makefile.in
src/config/: Makefile.am  Makefile.in  cfg_utils.cpp  cfg_utils.h  valid_settings.cpp  valid_settings.h
src/estimator/: Cestimator.cpp  Cestimator.h  Makefile.am  Makefile.in  read_logging_data.cpp  read_logging_data.h
src/fft/: Makefile.am  Makefile.in
src/imaging/: Cimg.cpp  Cimg.h  Cimg_pp.cpp  Cimgs.cpp  Cimgs.h  Makefile.am  Makefile.in  read_imaging.cpp
src/main/: Makefile.am  Makefile.in  init.cpp  initgeom.cpp  matfile.h  place_obj.cpp  place_obj.h  placegeom.cpp  placegeom.h  random.h  read_geom.cpp  read_global.cpp
src/material/: Cmat.cpp  Cmat.h  Cmat_excp.h  Cmat_types.h  Cmats.cpp  Cmats.h  Cmats_excp.h  Makefile.am  Makefile.in  read_mat.cpp
src/nffft/: Makefile.am  Makefile.in  read_nffft_pd.cpp  read_nffft_td.cpp
src/pointsources/: Cpointsources.cpp  Makefile.am  (+2 more)
(+90 files in other folders)
